--- a/assets/style.css
+++ b/assets/style.css
@@ -2,24 +2,28 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    overflow-x: hidden;
 
 }
 
 .navigation {
+    /* background-size: cover;
+    background-repeat: no-repeat; */
     display: flex;
     position: fixed;
+    background-color: rgb(226, 217, 217);
+    width: 100%;
     z-index: 1;
-    background-color: transparent;
 }
 
 .logo {
     padding: 10px 80px;
     opacity: 0.92;
-
 }
 
 .navbar {
-    right: 250px;
+    gap: 40px;
+    right: 100px;
     top: 25px;
     word-spacing: 1.9em;
     position: fixed;
@@ -27,13 +31,19 @@
 
 .navbar a {
     text-decoration: none;
-    color: inherit;
-    letter-spacing: 0.05em;
+    color: white;
     opacity: 0.8;
     font-size: 14px;
     font-family: sans-serif;
 }
 
+.navbar a:hover {
+    text-decoration: underline;
+}
+
+.fa-bag-shopping {
+    color: white;
+}
 
 #section1 {
     height: 700px;
@@ -95,10 +105,10 @@ button:hover {
 }
 
 .photo-items {
+    position: relative;
+    margin-top: 40px;
+    left: 40px;
     display: flex;
-    margin-top: 45px;
-    gap: 30px;
-    justify-content: center;
 }
 
 .btns {
@@ -108,34 +118,99 @@ button:hover {
 }
 
 
-#section3{
+#section3 {
     display: flex;
     justify-content: space-evenly;
     margin-top: 150px;
     margin-bottom: 150px;
 }
 
-.discoverspan{
-    font-family: 'Montserrat' ;
+.discoverspan {
+    font-family: 'Montserrat';
     font-size: 20px;
     margin-bottom: 25px;
 }
 
-.discover p{
+.discover p {
     width: 480px;
     text-align: justify;
-    
+
 }
 
-.discover span{
+.discover span {
     display: block;
-    width: 500px; 
+    width: 500px;
 }
 
-#section4{
-    display: flex;
+.discover-image img {
+    height: 70%;
+    width: 100%;
+    margin-left: 100px;
+}
+
+#section4 {
     justify-content: space-evenly;
-    margin-top: 150px;
-    margin-bottom: 150px;
+    margin-top: -200px;
 }
 
+.gallery-about {
+    text-align: center;
+}
+
+.gallery-photo-items {
+    position: relative;
+    margin-top: 60px;
+    left: 40px;
+    display: flex;
+}
+
+.items {
+    margin-left: 25px;
+}
+
+.btndiscover {
+    margin: 40px 600px 130px;
+}
+
+.footer {
+    background-color: #565656;
+    width: auto;
+    height: 400px;
+}
+
+.footer-display {
+    padding: 70px 120px;
+    display: flex;
+    gap: 130px;
+
+}
+
+.footer-display h2 {
+    font-size: 30px;
+    color: white;
+    opacity: 0.9;
+}
+
+.footer-display p {
+    color: white;
+    font-size: 20px;
+}
+
+#subscribe {
+    width: 800px;
+}
+
+.icons {
+    display: flex;
+    padding: 15px 110px;
+    font-size: 30px;
+    gap: 15px;
+
+}
+
+.subscribeinput{
+    opacity: 0.8;
+    width: 75%;
+    margin-top: 20px;
+    padding: 15px 50px;
+}
